# INF400

HW01/: sol1.py
HW01/sol2/: .clang-format  CMakeLists.txt  README.md  hw1.cc  hw1.ki  hw1.l  test.cmake
HW01/sol2/kiraz/: token.h
HW01/sol2/kiraz/test/: test_example.cc
HW01/sol2/kiraz/token/: Base.cc  Base.h
HW01/sol2/methods/: IDENTIFIER.h  KW_CLASS.h  KW_FUNC.h  KW_IF.h  KW_IMPORT.h  KW_WHILE.h  L_INTEGER.h  L_STRING.h  OP_ASSIGN.h  OP_COLON.h  OP_COMMA.h  OP_DIVF.h  OP_DOT.h  OP_EQUALS.h  OP_GE.h  OP_GT.h  OP_LBRACE.h  OP_LE.h  OP_LPAREN.h  OP_LT.h  OP_MINUS.h  OP_MULT.h  OP_NEWLINE.h  OP_PLUS.h  OP_RBRACE.h  OP_RETURNS.h  OP_RPAREN.h  OP_SCOLON.h  REJECTED.h
